# indusia-visual-editor

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile.api  README.md  docker-compose.dev.yml  docker-compose.localprod.yml  docker-compose.prod.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_proposed_pipelines.py  0003_adapt_runs.py  0004_pre_labels.py  0005_labels.py  0006_bom_items_detector_presets.py  0007_train_runs.py  0008_deployments.py  0009_edges.py  0010_chat_sessions.py  0011_auth.py  0012_inspection_feedback.py
docs/archive/: INDUSIA_AI_Visual_Editor_Platform_Plan_v2.docx  INDUSIA_AI_Visual_Editor_Platform_Plan_v2.md
docs/design/: dashboard-tokens.md
docs/plans/: 2026-05-22-visual-editor-mvp-m5-m14.md  2026-05-22-visual-editor-mvp.md  2026-05-27-figma-100-redo.md  2026-05-27-vue-fe-migration.md  2026-05-30-figma-stability-redesign.md  2026-05-30-inspection-stability-hardening.md  2026-05-31-g5-stable-eval-split.md  2026-05-31-t1-defect-examples-ingest-contract.md
docs/roadmap/: inspection-spec-document-v1.5.md
docs/runbook/: README.md  deploy.md  disaster-recovery.md  onboarding.md
docs/specs/: ais-model-push.md  graphflow-config-schema.md  label-studio-adoption.md  lsf-build.md  ml-workflow-dual-mode.md
infra/scripts/: pg_backup.sh  pg_restore.sh
infra/traefik/: dynamic.yml  traefik.yml
scripts/: dev-down.ps1  dev-up.ps1  sync-from-pc.sh  sync-to-macbook.ps1  vendor-lsf.ps1
src/indusia_visual_editor/: __init__.py  config.py  main.py
tests/: conftest.py  test_db_connection.py  test_db_models.py  test_health.py
tests/db/: test_inspection_feedback_models.py
tests/routes/: test_adapt.py  test_assets.py  test_auth.py  test_auth_middleware.py  test_bom_list.py  test_bom_upload.py  test_chat.py  test_chat_stream.py  test_dashboard.py  test_dataset_stats.py  test_defect_examples_push.py  test_deploy.py  test_edges.py  test_eval.py  test_inspection_feedback.py  test_labels.py  test_llm.py  test_prelabel.py  test_projects.py  test_training.py  test_training_split_status.py  test_training_stream.py  test_training_suggest.py
tests/schemas/: test_inspection_feedback_schemas.py
tests/services/: test_bom_parser.py  test_derive_inspect_scope.py  test_mi_classifier.py
tests/spike/: test_graphflow_schema.py  (+5 more)
web/: .dockerignore  .env.example  .gitignore  Dockerfile  eslint.config.mjs  index.html  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
(+252 files in other folders)
