[project]
name = "indusia-visual-editor"
version = "0.1.0"
description = "Factory-user-driven PCB inspection platform: BOM + golden sample to production inspection, no YAML, no CLI."
authors = [
    { name = "Ali Sadikin", email = "indusiaai@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi>=0.121.0,<0.130.0",
    "uvicorn[standard]>=0.32.0,<0.40.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "httpx>=0.27.0,<0.30.0",
    "sse-starlette>=2.1.0,<3.0.0",
    "pyyaml>=6.0,<7.0",
    "sqlalchemy[asyncio]>=2.0.36,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
]

[tool.poetry]
packages = [{ include = "indusia_visual_editor", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
alembic = "^1.14.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
